--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ background: rgb(255, 59, 59);
 #titulo1 {
 text-align: center;
 font-size: 50px;
-color:burlywood
+color:rgb(222, 135, 216)
 }
 
 .p1 {
