--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-background: rgb(255, 59, 59);
+background: rgb(206, 132, 132);
 }
 
 #titulo1 {
@@ -11,13 +11,13 @@ color:rgb(222, 135, 216)
 .p1 {
 text-align: center;
 font-size: 20px;
-color:lightgrey
+color:rgb(0, 0, 0)
 }
 
 .p2 {
     text-align: center;
     font-size: 20px;
-    color:palevioletred
+    color:rgb(251, 152, 185)
 }
 
 #img1{
