--- a/styles.css
+++ b/styles.css
@@ -46,7 +46,7 @@ color:rgb(232, 149, 253)
  header{
     text-align: center;
     font-size: 50px;
-    color:violet
+    color:rgb(153, 56, 153)
  }
 
  .principal{
