--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ color:rgb(246, 178, 241)
 text-align: center;
 font-size: 20px;
 color:rgb(0, 0, 0) ; 
-font-family:monospace;
+font-family:sans-serif;
 }
 
 .p2 {
