--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ body {
     text-align: center;
     font-size: 20px;
     color: rgb(0, 0, 0);
-    font-family:cursive;
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
 .p2 {
