--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,8 @@ body {
 .p2 {
     text-align: center;
     font-size: 20px;
-    color: rgb(0, 0, 0)
+    color: rgb(0, 0, 0) ;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 #img1 {
