--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@ body {
     text-align: center;
     font-size: 20px;
     color: rgb(0, 0, 0) ;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family:initial;
 }
 
 #img1 {
