--- a/styles.css
+++ b/styles.css
@@ -17,9 +17,9 @@ body {
 
 .p2 {
     text-align: center;
-    font-size: 30px;
+    font-size: 20px;
     color: rgb(0, 0, 0) ;
-    font-family:initial;
+    font-family:cursive;
 }
 
 #img1 {
