--- a/styles.css
+++ b/styles.css
@@ -17,9 +17,9 @@ body {
 
 .p2 {
     text-align: center;
-    font-size: 25px;
+    font-size: 23px;
     color: rgb(0, 0, 0) ;
-    font-family:Arial, Helvetica, sans-serif;
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
 #img1 {
