--- a/styles.css
+++ b/styles.css
@@ -17,9 +17,9 @@ body {
 
 .p2 {
     text-align: center;
-    font-size: 23px;
+    font-size: 24px;
     color: rgb(0, 0, 0) ;
-    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 #img1 {
